--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,7 @@ p {
 }
 .container {
   margin: auto;
-  max-width: 1100px;
+  max-width: 1500px;
   overflow: auto;
   padding: 0 20px;
 }
@@ -111,7 +111,19 @@ p {
 .clearFloat {
   clear: both;
 }
-
+.L-heading {
+  font-size: 40px;
+}
+/* padding classes */
+.py-1 {
+  padding: 10px 0;
+}
+.py-2 {
+  padding: 20px 0;
+}
+.py-3 {
+  padding: 30px 0;
+}
 /* showcase area styling */
 
 .showcase {
@@ -180,4 +192,52 @@ p {
 .main-footer {
   text-align: center;
   padding: 20px;
+}
+
+/* about page styling */
+
+.info-left {
+  float: left;
+  width: 50%;
+  min-height: 100%;
+}
+.info-right {
+  float: right;
+  width: 50%;
+  min-height: 100%;
+}
+
+.info-right img {
+  display: block;
+  width: 90%;
+  margin: auto;
+  border-radius: 50%;
+  margin-left: 90px;
+}
+
+/* testimonials styling */
+.items {
+  height: 600px;
+  background: brown;
+  padding-top: 40px;
+}
+
+.items h2 {
+  color: whitesmoke;
+  text-align: center;
+  padding-top: 40px;
+}
+
+.item img {
+  width: 100px;
+  float: left;
+  margin-right: 20px;
+  border-radius: 30%;
+}
+.item {
+  padding: 20px;
+  margin: 40px 0;
+  border-radius: 10px;
+  text-align: center;
+  opacity: 0.7;
 }
